Add payload return value config to dxl in and remove is-utf8 dep

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "dxl-client": "",
-    "is-utf8": "^0.2.1"
+    "dxl-client": ""
   },
   "devDependencies": {
     "jshint": "^2.9.5",
