--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "node-red-contrib-dxl",
+  "name": "@opendxl/node-red-contrib-dxl",
   "version": "0.0.1",
+  "author": "McAfee, Inc.",
   "description": "DXL nodes for Node-RED",
+  "license": "Apache-2.0",
+  "keywords": [
+    "opendxl",
+    "dxl",
+    "mcafee",
+    "Node-RED"
+  ],
+  "files": [
+    "dxl.html",
+    "dxl.js"
+  ],
   "engines": {
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "dxl-client": ""
+    "@opendxl/dxl-client": ""
   },
   "devDependencies": {
     "jshint": "^2.9.5",
@@ -15,9 +27,8 @@
   "eslintConfig": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/jbarlow-mcafee/node-red-contrib-dxl.git"
+    "url": "https://github.com/opendxl/node-red-contrib-dxl.git"
   },
-  "author": "Jeremy Barlow",
   "node-red": {
     "nodes": {
       "dxl": "dxl.js"
