--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
   },
   "devDependencies": {
     "commander": "^2.13.0",
+    "express": "^4.16.2",
     "jshint": "^2.9.5",
     "eslint-plugin-html": "^3.2.2",
+    "nock": "^9.1.6",
+    "node-red": "^0.18.0",
+    "should": "^13.2.1",
+    "sinon": "^4.2.2",
     "standard": "^10.0.3",
-    "snazzy": "^7.0.0"
+    "snazzy": "^7.0.0",
+    "supertest": "^3.0.0",
+    "when": "^3.7.8"
   },
   "eslintConfig": {},
   "repository": {
@@ -48,13 +55,20 @@
   "scripts": {
     "remove-config-node": "scripts/remove-config-node.js",
     "snazzy": "npm run standard | node_modules/.bin/snazzy",
-    "standard": "node_modules/.bin/standard \"**/*.html\" \"**/*.js\""
+    "standard": "node_modules/.bin/standard \"**/*.html\" \"**/*.js\"",
+    "test": "node_modules/.bin/mocha --recursive"
   },
   "standard": {
+    "env": [
+      "mocha"
+    ],
     "globals": [
       "DXL",
       "RED",
       "$"
+    ],
+    "ignore": [
+      "test/node-red-helper.js"
     ],
     "plugins": [
       "html"
