--- a/examples/dxl-config-example.json
+++ b/examples/dxl-config-example.json
@@ -1,6 +1,6 @@
 [
     {
-        "configfile": "/root/.node-red/dxlclient.config",
+        "configFile": "/root/.node-red/dxlclient.config",
         "id": "4d73f880.04a33",
         "name": "client",
         "type": "dxl-client",
