--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "express": "^4.16.2",
     "jshint": "^2.9.5",
     "eslint-plugin-html": "^3.2.2",
+    "mocha": "^4.1.0",
     "nock": "^9.1.6",
     "node-red": "^0.18.0",
     "should": "^13.2.1",
-    "sinon": "^4.2.2",
+    "sinon": "^4.1.4",
     "standard": "^10.0.3",
     "snazzy": "^7.0.0",
     "supertest": "^3.0.0",
@@ -40,7 +41,7 @@
   "eslintConfig": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/opendxl/node-red-contrib-dxl.git"
+    "url": "git://github.com/opendxl/node-red-contrib-dxl.git"
   },
   "node-red": {
     "nodes": {
