--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "@opendxl/dxl-client": "^0.0.1",
-    "@opendxl/dxl-bootstrap": "^0.1.0"
+    "@opendxl/dxl-bootstrap": "^0.1.0",
+    "safe-buffer": "^5.1.1"
   },
   "devDependencies": {
     "commander": "^2.13.0",
