--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^4.1.0",
     "nock": "^9.1.6",
     "node-red": "^0.18.0",
+    "node-red-node-test-helper": "^0.1.8",
     "rimraf": "^2.6.2",
     "should": "^13.2.1",
     "sinon": "^4.1.4",
@@ -81,9 +82,6 @@
       "DXL",
       "RED",
       "$"
-    ],
-    "ignore": [
-      "test/node-red-helper.js"
     ],
     "plugins": [
       "html"
