--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "preci": "npm run lint",
     "ci": "npm run test",
     "predoc": "rimraf out/jsdoc",
-    "doc": "jsdoc -c ./doc/conf.json doc/index.md -r lib/ -r nodes/ -u doc/sdk -d out/jsdoc",
+    "doc": "jsdoc -c ./doc/conf.json doc/index.md -r -u doc/sdk -d out/jsdoc lib/ nodes/",
     "postdoc": "node scripts/postdoc.js"
   },
   "standard": {
