Add provision configuration option to client node UI
This commit adds support for provisioning the DXL client configuration
to the UI for the Node-RED client node. The node implementation uses the
underlying 'provisionconfig' support in the OpenDXL JavaScript client.
The files for the provisioned configuration are stored on the Node-RED
server and referenced from the config file property in the client node.

This commit also bumps the minimum dependency for dxl-client to 0.1.0 in
order to pick up support for the 'provisionconfig' feature.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "@opendxl/dxl-client": "^0.0.1",
+    "@opendxl/dxl-client": "^0.1.0",
     "@opendxl/dxl-bootstrap": "^0.1.0",
     "safe-buffer": "^5.1.1"
   },
@@ -36,6 +36,7 @@
     "node-red-node-test-helper": "^0.1.8",
     "rimraf": "^2.6.2",
     "should": "^13.2.1",
+    "sinon": "^4.1.4",
     "standard": "^10.0.3",
     "snazzy": "^7.0.0"
   },
