--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,14 @@ services:
 
 before_install:
   - docker pull opendxl/opendxl-broker
-  - docker run -d -p 127.0.0.1:8883:8883 --volume "$PWD/dxlbroker-volume:/dxlbroker-volume" opendxl/opendxl-broker
+  - docker run -d -p 127.0.0.1:8883:8883 -p 127.0.0.1:8443:8443 opendxl/opendxl-broker
   - docker ps -a
-  - cp test/nodes/client_config.cfg.travis test/nodes/client_config.cfg
+
+before_script:
+  - ./node_modules/.bin/dxlclient provisionconfig -u admin -p password test/nodes 127.0.0.1 client
+  - cp test/nodes/dxlclient.config test/nodes/client_config.cfg
+  - sed -i -e "s/127.0.0.1;127.0.0.1/127.0.0.1/g" -e "/local/d" -e "/docker/d" test/nodes/client_config.cfg
+  - cat test/nodes/client_config.cfg
 
 env:
   - CXX=g++-4.8
