--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [8.x, 9.x, 10.x, 12.x]
+        node-version: [16.x, 18.x, 20.x]  # Updated Node.js versions
       fail-fast: false
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3  # Updated to latest version
       with:
         submodules: recursive
         
     - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3  # Updated to latest version
       with:
-        node-version: ${{ matrix.node-version }}       
-      env:
-        CXX: g++-4.8
+        node-version: ${{ matrix.node-version }}
         
     - name: Install broker
       run: |
@@ -41,7 +39,7 @@ jobs:
       run: |
         sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
         sudo -E apt-get update -y --allow-releaseinfo-change
-        sudo -E apt-get -yq --no-install-suggests --no-install-recommends install g++-4.8
+        sudo -E apt-get -yq --no-install-suggests --no-install-recommends install g++-9
         npm install
         
     - name: Provision client
