--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@opendxl/node-red-contrib-dxl",
-  "version": "0.1.3",
-  "author": "McAfee, LLC",
+  "version": "0.1.4",
+  "author": "Musarubra US LLC",
   "description": "Core collection of DXL Node-RED nodes",
   "license": "Apache-2.0",
   "keywords": [
     "node-red",
     "opendxl",
     "dxl",
-    "mcafee"
+    "trellix"
   ],
   "files": [
     "lib",
@@ -18,27 +18,27 @@
     "README.md"
   ],
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=16.0.0"
   },
   "dependencies": {
-    "@opendxl/dxl-client": "^0.1.0",
-    "@opendxl/dxl-bootstrap": "^0.1.0",
+    "@opendxl/dxl-bootstrap": "^0.1.1",
+    "@opendxl/dxl-client": "^0.1.1",
     "safe-buffer": "^5.1.1"
   },
   "devDependencies": {
     "archiver": "^2.1.1",
     "commander": "^2.13.0",
-    "jsdoc": "^3.5.5",
+    "eslint-plugin-html": "^8.1.1",
+    "jsdoc": "^4.0.3",
     "jshint": "^2.9.5",
-    "eslint-plugin-html": "^3.2.2",
-    "mocha": "^4.1.0",
-    "node-red": "^0.20.8",
-    "node-red-node-test-helper": "^0.2.3",
+    "mocha": "^10.7.3",
+    "node-red": "^4.0.2",
+    "node-red-node-test-helper": "^0.3.4",
     "rimraf": "^2.6.2",
     "should": "^13.2.1",
     "sinon": "^4.1.4",
-    "standard": "^10.0.3",
-    "snazzy": "^7.0.0"
+    "snazzy": "^7.0.0",
+    "standard": "^17.1.0"
   },
   "eslintConfig": {},
   "main": "index.js",
@@ -80,6 +80,9 @@
     ],
     "plugins": [
       "html"
+    ],
+    "ignore": [
+      "**/*.min.js"
     ]
   }
 }
